# thecattycookoldunnown

./: .gitignore  pyproject.toml  requirements.txt
recipes/: admin.py  forms.py  models.py  settings.py  site_packages_setup.py  urls.py  utils.py  views.py  wsgi.py
static/css/: jasonmorrow.css
templates/: base
templates/recipes/: allcontents  allrecipes_list.html  count-words  error  feedparse  get  get-and-store  getchron  index  modelsearch  retrieve-recipes  scrape  scrapecontents  searchinput  suggestionresults  suggestions
